# SystemDesign

./: CMakeLists.txt  makefile.txt
.github/workflows/: cpp-make.yml
src/: ObserverPattern.cpp  ObserverPattern.h
src/Test/: ObserverPattern_test.cpp
